; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_presentation_queue_get_background_color.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_presentation_queue_get_background_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32, i32*)* }

@PRESENTATION_QUEUE_GET_BACKGROUND_COLOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vdp_presentation_queue_get_background_color(%struct.TYPE_5__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* @PRESENTATION_QUEUE_GET_BACKGROUND_COLOR, align 4
  %8 = call i32 @CHECK_FUNC(i32 %7)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32 (i32, i32*)*, i32 (i32, i32*)** %11, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 %12(i32 %13, i32* %14)
  ret i32 %15
}

declare dso_local i32 @CHECK_FUNC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
